@@ -22,6 +22,9 @@
 
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
+	<LI>HTMLDOC no longer enables interpolation of 2-color
+	images.
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Fixed a table column sizing bug.
